# JJJ

./: LICENSE  README.md  requirements.txt  run.bat
notes/: pyproject.toml
notes/app/: config.py  constants.py  main.py
notes/core/: database.py  export_manager.py  models.py  note_manager.py  statistics.py  timer_manager.py
notes/scripts/: build.py  installer.nsi
notes/ui/: main_window.py
notes/ui/dialogs/: glass_dialog.py  settings_dialog.py
notes/ui/styles/: themes.py
notes/ui/widgets/: calendar_view.py  log_widget.py  note_card.py  note_manager_widget.py  rich_editor.py  timer_display.py
notes/utils/: file_utils.py  system_tray.py  system_utils.py  validators.py
